tooling/nargo_cli/tests/snapshots/execution_success/struct_array_inputs/execute__tests__force_brillig_false_inliner_9223372036854775807_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[struct_array_inputs] Circuit output: Field(3)
----- stderr -----
