tooling/nargo_cli/tests/snapshots/execution_success/struct_array_inputs/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [(Field, Field); 3]):
    (no terminator instruction)
}
[struct_array_inputs] Circuit output: 0x03
